Added some gems pg and rails12factor

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class = "container">
+	<div class = "jumbotron center">
+		<h1>Progress</h1>
+		<p>Track the work of individual team members to increase efficiency and keep everyone on the same page</p>
+		<p>
+			<%= link_to "Log In", "#", class: "btn btn-default btn-lg"%>
+			<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg"%>
+		</p>
+	</div>
+</div>
